<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Advanced Settings</string>
    <string name="screen_colors_title">Colors</string>
    <string name="category_screen_title">Screen</string>

    <!-- Hardware tunables - Vibrator intensity -->
    <string name="vibrator_intensity_title">Vibrator intensity</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>

    <!-- Hardware tunables - Color calibration -->
    <string name="color_calibration_title">Color calibration</string>
    <string name="color_calibration_summary">Calibrate on-screen colors</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>

    <!-- Hardware tunables - Gamma calibration -->
    <string name="gamma_tuning_title_head">Gamma calibration</string>
    <string name="gamma_tuning_summary_head">Tweak gamma values</string>
    <string name="gamma_tuning_control_set_header">Group <xliff:g id="index">%d</xliff:g></string> <!-- used if no name provided by overlay -->
    <string name="gamma_tuning_contrast">Contrast</string>
    <string name="gamma_tuning_brightness">Brightness</string>
    <string name="gamma_tuning_saturation">Saturation</string>

    <!--  Other device settings -->
    <string name="sensors_motors_title">Sensors &amp; motors</string>
    <string name="display_calibration_title">Display calibration</string>
    <string name="reset_button">Reset</string>

    <string name="touchscreen_subcat_title">Touchscreen</string>
    <string name="touchscreen_sensitivity_title_head">Touch sensitivity</string>
    <string name="touchscreen_sensitivity_summary_head">Set touch panel sensitivity</string>
    <string name="category_sensors_title">Sensors</string>
    <string name="gyro_subcat_title">Gyroscope</string>
    <string name="use_gyro_calibration_title_head">Use calibration data</string>
    <string name="use_gyro_calibration_summary_head">Use the gyroscope calibration values. Do a calibration after checking this!</string>
    <string name="calibrate_gyro_title_head">Calibrate</string>
    <string name="calibrate_gyro_summary_head">Put your phone on a flat surface, and press this to calibrate</string>

    <string name="touchkey_s2w_title_head">Enable Sweep2Wake</string>
    <string name="touchkey_s2w_summary_head">Sweep the four capacitative keys from left to right to wake the device</string>

    <string name="touchkey_subcat_title">Touch key</string>
    <string name="touchkey_light_title_head">Enable keys backlight</string>
    <string name="touchkey_light_summary_head">Light up touch keys when screen is on</string>
    <string name="touchkey_bln_title_head">Enable keys notifications</string>
    <string name="touchkey_bln_summary_head">Light up touch keys when screen is off, and a notification is received</string>
    <string name="touchkey_bln_off_title_head">Turn off BLN</string>
    <string name="touchkey_bln_off_summary_head">Turn off BLN if it is stuck. Will not disable BLN.</string>
    <string name="touchkey_bln_interval_title_head">Set blink interval</string>
    <string name="touchkey_bln_interval_summary_head">Set the duration in miliseconds that the capacitative lights will stay on/off during notification.</string>
    <string name="touchkey_bln_interval_dialog_message">Set the blink on/off duration in miliseconds.</string>
    <string name="touchkey_bln_interval_dialog_on_label">On (ms)</string>
    <string name="touchkey_bln_interval_dialog_off_label">Off (ms)</string>
    <string name="touchkey_bln_interval_dialog_reset">Reset to Default</string>
    <string name="touchkey_bln_interval_dialog_reset_toast">Blink interval reset to default!</string>
    <string name="touchkey_bln_interval_dialog_success_toast">Blink interval set successfully!</string>
    <string name="touchkey_bln_timeout_title_head">Set blink timeout</string>
    <string name="touchkey_bln_timeout_summary_head">Set the duration in seconds for timout of the BLN.\n(Lower values save more battery)</string>
    <string name="touchkey_bln_timeout_dialog_message">Set the BLN timout duration in seconds.</string>
    <string name="touchkey_bln_timeout_dialog_timeout_label">Timeout (s)</string>
    <string name="touchkey_bln_timeout_dialog_reset_toast">Blink timeout reset to default!</string>
    <string name="touchkey_bln_timeout_dialog_success_toast">Blink timeout set successfully!</string>

</resources>
