<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory 
        android:title="@string/gyro_subcat_title">
        <!-- Use sensor calibration -->
        <CheckBoxPreference
            android:key="use_gyro_calibration"
            android:title="@string/use_gyro_calibration_title_head"
            android:summary="@string/use_gyro_calibration_summary_head"
            android:defaultValue="true" />

        <!-- Do gyro calibration -->
        <Preference
            android:key="calibrate_gyro"
            android:title="@string/calibrate_gyro_title_head"
            android:summary="@string/calibrate_gyro_summary_head" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="sensors_motors_category"
        android:title="@string/sensors_motors_title" >

        <com.cyanogenmod.settings.device.VibratorIntensity
            android:key="vibration_intensity"
            android:title="@string/vibrator_intensity_title"
            android:dialogTitle="@string/vibrator_intensity_title"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/touchkey_subcat_title">
        <com.cyanogenmod.settings.device.Sweep2Wake
            android:key="touchkey_s2w"
            android:title="@string/touchkey_s2w_title_head"
            android:summary="@string/touchkey_s2w_summary_head"
            android:entries="@array/s2w_entries"
            android:entryValues="@array/s2w_entries_values"
            android:defaultValue="0" />

        <CheckBoxPreference
            android:key="s2w_sensitive"
            android:title="@string/s2w_sensitive_head"
            android:summary="@string/s2w_sensitive_summary_head"
            android:defaultValue="false" />

        <!-- Touchkey backlight -->
        <CheckBoxPreference
            android:key="touchkey_light"
            android:title="@string/touchkey_light_title_head"
            android:summary="@string/touchkey_light_summary_head"
            android:defaultValue="true" />
    </PreferenceCategory>
</PreferenceScreen>

