<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_centerHorizontal="true">
	
	<TextView
        android:id="@+id/blink_interval_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6.0dip"
        android:layout_marginBottom="20.0dip"
        android:paddingLeft="12.0dip"
        android:paddingRight="12.0dip"
        android:textSize="20.0dip"
        android:textColor="#FFFFFF" />
	
	<LinearLayout
        android:id="@+id/blink_interval_dialog_linearlayout1"
	    android:gravity="center"
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:layout_below="@+id/blink_interval_dialog_message">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <TextView
                android:id="@+id/blink_interval_dialog_on_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6.0dip"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip"
                android:textSize="20.0dip"
                android:textColor="#FFFFFF"
                android:text="@string/touchkey_bln_interval_dialog_on_label"/>
		
            <NumberPicker
                android:id="@+id/NumberPickerOn"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="6.0dip"
                android:layout_marginTop="6.0dip"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0">

            <TextView
                android:id="@+id/blink_interval_dialog_off_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dip"
                android:paddingLeft="12.0dip"
                android:paddingRight="12.0dip"
                android:textSize="20.0dip"
                android:textColor="#FFFFFF"
                android:text="@string/touchkey_bln_interval_dialog_off_label"/>
        
        
            <NumberPicker
                android:id="@+id/NumberPickerOff"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="6.0dip"
                android:layout_marginTop="6.0dip" />

        </LinearLayout>
			
	</LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blink_interval_dialog_linearlayout1">

        <Button
            android:id="@+id/blink_interval_dialog_reset_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/touchkey_bln_interval_dialog_reset"/>
            
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="20.0dip" />

    </LinearLayout>

</RelativeLayout>

